--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "micro-mvc",
+    "name": "ninjaSimo/micro-mvc",
     "description": "Framework Mvc basic for small project",
     "type": "framework",
     "keywords": ["framework", "mvc"],
