--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ninjasimo/micro-mvc",
     "description": "Framework Mvc basic for small project",
     "type": "framework",
-    "license": "UNLICENSED",
+    "license": "proprietary",
     "version": "0.0.0",
     "keywords": ["framework", "mvc"],
     "authors": [
