--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,17 @@
 {
     "name": "ninjasimo/micro-mvc",
     "description": "Framework Mvc basic for small project",
+    "license": "MIT",
     "type": "library",
-    "autoload": {
-        "psr-4": {
-            "NinjaSimo\\Micro-MVC": "src/"
-        }
-    },
-    "keywords": [
-        "framework",
-        "mvc"
-    ],
     "authors": [
         {
             "name": "Simone Anselmo",
             "email": "simone.anselmo@simowd.it"
         }
     ],
-    "minimum-stability": "stable",
-    "require": {
-        "php": "^8.0"
+    "autoload": {
+      "classmap": [
+        "src/"
+      ]
     }
 }
